--- a/docs-development/stylesheets/extra.css
+++ b/docs-development/stylesheets/extra.css
@@ -1,9 +1,10 @@
 :root {
-  --md-primary-fg-color: #e87722;
-  --md-primary-fg-color--light: #f2a900;
-  --md-primary-fg-color--dark: #d6001c;
+  --md-primary-fg-color: #23395d;
 
   --md-accent-fg-color: #4b7aa1;
-  --md-accent-fg-color--light: #4b7aa1;
-  --md-accent-fg-color--dark: #193851;
+}
+
+[data-md-color-scheme='slate'] {
+  /* Override the link style for dark theme */
+  --md-typeset-a-color: #adf;
 }
